# family_archive

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yaml  pyproject.toml  search.html  sitemap.xml
.github/workflows/: mkdocs_deploy.yaml
archive_app/: models.py  views.py
archive_app/migrations/: 0002_auto_20230129_0440.py  0003_familymember.py  0004_familymember_profile_picture_alter_userprofile_user.py
database_installation/: index.html
docs/: conf.py  database_installation.md  database_installation.rst  index.md  index.rst  running_server.md  webapp_installation.md
family_archive/: pyproject.toml  settings.py  urls.py
family_archive/archive_app/: admin.py  apps.py  forms.py  models.py  signals.py  views.py
family_archive/archive_app/migrations/: 0001_initial.py  0005_alter_familymember_profile_picture.py  0006_mediafile_created_at_post.py  0007_rename_created_at_mediafile_date_uploaded_and_more.py  0008_remove_mediafile_date_uploaded_and_more.py
family_archive/family_archive/: asgi.py  settings.py  urls.py  wsgi.py
family_archive/static/: familytree.d.ts
family_archive/static/css/: base.css
family_archive/templates/archive_app/: family_tree.html  gallery.html  home_page.html  media_upload_form.html  navbar.html  post_form.html  tag_images_form.html
family_archive/templates/registration/: login.html
running_server/: index.html
search/: search_index.json
static/css/: base.css
templates/archive_app/: family_tree.html  navbar.html
webapp_installation/: index.html
